Change logo names

--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -84,9 +84,9 @@
 {#              <li><img class="center" src="{% static "kat_main_site/Logo1.jpg" %}" alt="Logo1"/></li>#}
 {#              <li><img class="center" src="{% static "kat_main_site/Logo2.jpg" %}" alt="Logo2"/></li>#}
 {#              <li><img class="center" src="{% static "kat_main_site/Logo3.jpg" %}" alt="Logo3"/></li>#}
-        <li><img class="center" src="{% static "kat_main_site/Logo4.jpg" %}" alt="Logo1"/></li>
-        <li><img class="center" src="{% static "kat_main_site/Logo5.jpg" %}" alt="Logo2"/></li>
-        <li><img class="center" src="{% static "kat_main_site/Logo6.jpg" %}" alt="Logo3"/></li>
+        <li><img class="center" src="{% static "kat_main_site/logo4.jpg" %}" alt="Logo1"/></li>
+        <li><img class="center" src="{% static "kat_main_site/logo5.jpg" %}" alt="Logo2"/></li>
+        <li><img class="center" src="{% static "kat_main_site/logo6.jpg" %}" alt="Logo3"/></li>
       </ul>
     </div>
 
