Fix menu for mobile devices; added temporarily brand

--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -25,9 +25,7 @@
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 		        <span class="icon-th-list"></span></a>
-          <a href="/" class="navbar-brand">
-{#                  <img class="center" src="{% static "kat_main_site/Logo7.png" %}" alt="Logo1"/>#}
-          </a>
+          <a href="/" class="brand">Ukrainian Compound Archery</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li ><a href="/">Главная</a></li>
