Fix menu for mobile devices 2

--- a/kat/kat/media/css/style.css
+++ b/kat/kat/media/css/style.css
@@ -260,6 +260,7 @@ ul.noindent {
   .navbar-inner {
     font-size: 12px;
     min-height: 20px;
+    padding: 0px;
   }
 
   .nav-collapse .nav > li > a,
