--- a/kat/kat/media/css/style.css
+++ b/kat/kat/media/css/style.css
@@ -3,18 +3,45 @@
  * Copyright (c) 2013, 3PS Studios.
  */
 .navbar {
-  padding-bottom: 26px;
+  padding-bottom: 20px;
   margin-bottom: 0px;
+}
+
+.navbar .brand {
+  font-family: "Arial Black";
+  font-size: 32px;
+  text-align: center;
+    padding-top: 20px;
+  padding: 20px 20px 10px;
+float: none;
+    clear: both;
+
+}
+
+.navbar-brand {
+  font-family: "Arial Black";
+  font-size: 26px;
+  text-align: center;
+height: 100%;
+    min-height: 40px;
+
+}
+
+.navbar-login{
+  float: right;
+  padding: 13px 0 0 0;
+  clear: both;
+  font-size: 12px;
+  margin-right: -15px;
 }
 
 .navbar-inner {
   min-height: 40px;
-  padding: 19px 0 0 0;
   background: white;
   color: #070336;
   border: none;
   box-shadow: none;
-  -webkit-box-shadow:none;
+    -webkit-box-shadow:none;
 }
 
 .navbar .nav > li > a {
@@ -47,12 +74,6 @@
 .navbar .nav li.dropdown.open.active > .dropdown-toggle {
   color: #97918B;
   background-color: transparent;
-}
-
-.brand {
-  font-family: 'Corbel';
-    font-weight: bold;
-
 }
 
 .dropdown-menu {
