--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -19,60 +19,76 @@
   {% load staticfiles %}
 	</head>
 	<body>
-{#    <script src="/media/bootstrap/js/bootstrap.js"></script>#}
     <div class="navbar ">
       <div class="navbar-inner">
         <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-		        <span class="icon-th-list"></span></a>
-          <a href="/" class="brand">Ukrainian Compound Archery</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li ><a href="/">Главная</a></li>
-              <li ><a href="/news/">Новости</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="1000">Про Спорт</a>
-                  <ul class="dropdown-menu">
-                    <li><a href="/faq/">Терминология</a></li>
-    {#                  <li><a href="/history/">История</a></li>#}
-    {#                  <li><a href="/development/">Развитие</a></li>#}
-    {#                  <li><a href="/rules/">Правила</a></li>#}
-                    <li><a href="/articles/">Статьи</a></li>
-                    <li><a href="/literature/">Литература</a></li>
-                  </ul>
-              </li>
-              <li class="dropdown"><a href="#"  class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" >Соревнования</a>
-                <ul class="dropdown-menu">
-                  <li><a href="/tournament-registration/">Регистрация на Соревнования</a></li>
-                  <li><a href="/participants-lists/">Списки участников</a></li>
-    {#                <li><a href="/calendar/">Календарь</a></li>#}
-    {#                <li><a href="/ranking/">Рейтинг</a></li>#}
-    {#                <li><a href="/results/">Результаты</a></li>#}
-    {#                <li><a href="/records/">Рекорды</a></li>#}
-    {#                <li><a href="/qualifying/">Нормативы</a></li>#}
-                </ul>
-              </li>
-    {#            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Организация</a>#}
-    {#                 <ul class="dropdown-menu">#}
-    {#                    <li><a href="/organization/">Про Нас</a></li>#}
-    {#                    <li><a href="/structure/">Структура</a></li>#}
-    {#                    <li><a href="/activities/">Деятельность</a></li>#}
-    {#                    <li><a href="/events/">События</a></li>#}
-    {#                 </ul>#}
-    {#            </li>#}
-              <li ><a href="/forum/">Форум</a></li>
-              <li ><a href="/gallery/">Фото</a></li>
-              <li ><a href="/contacts/">Контакты</a></li>
-              <li ><a href="/links/">Ссылки</a></li>
-              {% if user.is_authenticated %}
-                <li><a href="/accounts/logout/">Выйти</a></li>
-                <li ><p class="navbar-text">Добро пожаловать, {{ user.username }}!</p></li>
-              {% else %}
-                <li><a href="/accounts/signup/">Регистрация</a></li>
-                <li><a href="/accounts/login/">Вход</a></li>
-              {% endif %}
-            </ul>
+          <div class="span3">
+            <a href="/" class="brand">Ukrainian Compound Archery</a>
           </div>
+
+          <div class="span9">
+            <div class="row">
+              <div class="navbar-login pull-right">
+                <div class="container">
+                  <ul class="nav ">
+                    {% if user.is_authenticated %}
+                      <li ><p class="navbar-text">Добро пожаловать, {{ user.username }}!</p></li>
+                      <li><a href="/accounts/logout/">Выйти</a></li>
+                    {% else %}
+                      <li><a href="/accounts/signup/">Регистрация</a></li>
+                      <li><a href="/accounts/login/">Вход</a></li>
+                    {% endif %}
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+{#          <div class="clear"></div>#}
+          <div class="row">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+              <span class="icon-th-list"></span></a>
+
+            <div class="nav-collapse collapse">
+              <ul class="nav">
+                <li ><a href="/">Главная</a></li>
+                <li ><a href="/news/">Новости</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="1000">Про Спорт</a>
+                    <ul class="dropdown-menu">
+                      <li><a href="/faq/">Терминология</a></li>
+      {#                  <li><a href="/history/">История</a></li>#}
+      {#                  <li><a href="/development/">Развитие</a></li>#}
+      {#                  <li><a href="/rules/">Правила</a></li>#}
+                      <li><a href="/articles/">Статьи</a></li>
+                      <li><a href="/literature/">Литература</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown"><a href="#"  class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" >Соревнования</a>
+                  <ul class="dropdown-menu">
+                    <li><a href="/tournament-registration/">Регистрация на Соревнования</a></li>
+                    <li><a href="/participants-lists/">Списки участников</a></li>
+      {#                <li><a href="/calendar/">Календарь</a></li>#}
+      {#                <li><a href="/ranking/">Рейтинг</a></li>#}
+      {#                <li><a href="/results/">Результаты</a></li>#}
+      {#                <li><a href="/records/">Рекорды</a></li>#}
+      {#                <li><a href="/qualifying/">Нормативы</a></li>#}
+                  </ul>
+                </li>
+      {#            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Организация</a>#}
+      {#                 <ul class="dropdown-menu">#}
+      {#                    <li><a href="/organization/">Про Нас</a></li>#}
+      {#                    <li><a href="/structure/">Структура</a></li>#}
+      {#                    <li><a href="/activities/">Деятельность</a></li>#}
+      {#                    <li><a href="/events/">События</a></li>#}
+      {#                 </ul>#}
+      {#            </li>#}
+                <li ><a href="/forum/">Форум</a></li>
+                <li ><a href="/gallery/">Фото</a></li>
+                <li ><a href="/contacts/">Контакты</a></li>
+                <li ><a href="/links/">Ссылки</a></li>
+              </ul>
+            </div>
+        </div>
         </div>
       </div>
     </div>
