Menu position fix

--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -26,7 +26,7 @@
             <a href="/" class="brand">Ukrainian Compound Archery</a>
           </div>
 
-          <div class="span9">
+          <div class="span9 pull-right">
             <div class="row">
               <div class="navbar-login pull-right">
                 <div class="container">
@@ -44,11 +44,11 @@
             </div>
           </div>
 {#          <div class="clear"></div>#}
-          <div class="row">
+          <div class="row pull-right">
             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
               <span class="icon-th-list"></span></a>
 
-            <div class="nav-collapse collapse">
+            <div class="nav-collapse collapse pull-right">
               <ul class="nav">
                 <li ><a href="/">Главная</a></li>
                 <li ><a href="/news/">Новости</a></li>
