Smaller new logo

--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -95,9 +95,9 @@
 
     <div class="slideshow">
       <ul class="bxslider noindent">
-        <li><img class="center" src="{% static "kat_main_site/logo1.png" %}" alt="Logo1"/></li>
-        <li><img class="center" src="{% static "kat_main_site/logo2.png" %}" alt="Logo2"/></li>
-        <li><img class="center" src="{% static "kat_main_site/logo3.png" %}" alt="Logo3"/></li>
+        <li><img class="center" src="{% static "kat_main_site/logo1.jpg" %}" alt="Logo1"/></li>
+        <li><img class="center" src="{% static "kat_main_site/logo2.jpg" %}" alt="Logo2"/></li>
+        <li><img class="center" src="{% static "kat_main_site/logo3.jpg" %}" alt="Logo3"/></li>
       </ul>
     </div>
 
