--- a/kat/katgallery/templates/gallery.html
+++ b/kat/katgallery/templates/gallery.html
@@ -4,28 +4,24 @@
 {% load pagination_tags %}
 {% block global_content %}
 <ul class="thumbnails">
-    <li  class="span3">
-        <div class="thumbnail">
+    <li class="thumbnail">
             <a href="/video/"><img src="/media/images/youtube.png"></a>
             <div class="album-name">
                 <a href="/video/">Videos</a>
             </div>
-        </div>
     </li>
 </ul>
 
 {% autopaginate albums 9 %}
     {% for album in albums %}
         <ul class="thumbnails">
-            <li  class="span3">
-                <div class="thumbnail">
+            <li class="thumbnail">
                     <a href="{% url "katgallery.views.album_list" album.GetAlbumId %}" >
                     <img src="{%  thumbnail_url album %}">
                     </a>
                     <div class="album-name">
                         <a href="{% url "katgallery.views.album_list" album.GetAlbumId %}">{{  album.title.text }}</a>
                     </div>
-                </div>
             </li>
         </ul>
     {% endfor %}
