Minor fix of the indent and language.

--- a/kat/kat/templates/kat_base.html
+++ b/kat/kat/templates/kat_base.html
@@ -24,6 +24,8 @@
         <div class="container">
           <div class="span3">
             <a href="/" class="brand">Ukrainian Compound Archery</a>
+{#                        <a href="/" class="brand"><img class="center" src="{% static "kat_main_site/UkrainianCompoundArchery.svg" %}" alt="Logo1"/></a>#}
+
           </div>
 
           <div class="span9 pull-right">
